# OPVJVL

./: .gitignore  plan,.md  pyproject.toml  requirements-dev.txt  requirements-pyqt5.txt  requirements-pyqt6.txt  要件定義書_基本設計書.md
.claude/: CLAUDE.md
OPVJVL2/: main_gui.py  measurement_worker.py  requirements.txt
OPVJVL2400/: README.md  main_gui.py  measurement_worker.py
bases/OPVJVL2/: README.md  instruments.py  main_gui.py  measurement_worker.py
bases/OPVJVL2400/: instruments.py  main_gui.py  measurement_worker.py  requirements.txt
bases/keithley2400/: InstrumentsControl.py  Keithley2400_JVL.py  Keithley2400_OPV.py
bases/keithley2600/: OPV_measurement.py  OPV_measurement_ver2.py  keithley2600_IVmeasurement - kyougoku.py  keithley2600_IVmeasurement - kyougoku_ver2.py
docs/: Qt_Designer.md  investigation_eqe_comparison.md  引継ぎドキュメント.md  要件定義書_基本設計書 copy.md  要件定義書_基本設計書.md
docs/source/: app.rst  concepts.rst  conf.py  getting_started.rst  index.rst  installation.rst  logging_specification.rst  models_instruments.rst  models_measurement.rst  tutorials.rst  utils.rst  viewmodels.rst  views.rst  workers.rst
keithley2400/: Keithley2400_JVL.py  Keithley2400_OPV.py
keithley2600/: InstrumentsControl.py  OPV_measurement.py  OPV_measurement_ver2.py
src/: app.py  qtcompat.py
src/opvjvl/: app.py  qtcompat.py
src/utils/: device_settings.py  logger.py  paths.py  persistence.py  version.py  win32_utils.py
src/viewmodels/: base_viewmodel.py  dual_channel_viewmodel.py  jvl_viewmodel.py  opv_viewmodel.py
src/views/: data_viewer.py  theme.py  (+10 more)
tests/: conftest.py
(+71 files in other folders)
